# radar-localization

./: CMakeLists.txt  README.md  git.sh  inference.md  main.cpp
include/: ceres_registration.hpp  cloud_registration.hpp  features.hpp  filter.hpp  gps_sensor.hpp  imu_sensor.hpp  normal_feature.hpp  odometry.hpp  odometry_config.hpp  odometry_fusion.hpp  radar_sensor.hpp  radar_utils.hpp  registration.hpp  threshold.hpp
include/display/: show_point_cloud.h
include/filter/: base_filter.h  cfar_filter.h  filter.h  k_strongest_filter.h
include/raw_data/: data.h  radar_data.h
include/registration/: base_registration.h  icp_registration.h  ndt_registration.h  registration.h
include/utils/: utils_func.h
log/: find_best_cen_config.txt  find_best_cen_k_config.txt  latest_list
log/my/: spectrum_mean_power.txt
log/spectrum/: show.py  spectrum_afterfilter.txt  spectrum_config.txt  spectrum_withoutbias.txt
src/: ceres_registration.cpp  features.cpp  filter.cpp  gps_sensor.cpp  imu_sensor.cpp  normal_feature.cpp  odometry.cpp  odometry_fusion.cpp  radar_sensor.cpp  radar_utils.cpp  registration.cpp  threshold.cpp
src/display/: show_point_cloud.cpp
src/filter/: base_filter.cpp  cfar_filter.cpp  k_strongest_filter.cpp
src/localization/: package.xml
src/raw_data/: radar_data.cpp
src/registration/: base_registration.cpp  icp_registration.cpp  ndt_registration.cpp  registration.cpp
src/utils/: utils_func.cpp
test/: test_features.cpp  test_gps.cpp  test_imu.cpp  test_odometry.cpp  test_radar.cpp
test/result/: cen2018_icp.txt  ceres_registration.txt  ceres_registration_1_2.txt  ceres_registration_1_4.txt  ceres_registration_2_3.txt  ceres_registration_2_4.txt  ceres_registration_doppler_1_2.txt  ceres_registration_doppler_2_3.txt  ceres_registration_kstrongest.txt  ceres_registration_kstrongest_1_2.txt  ceres_registration_kstrongest_1_4.txt  ceres_registration_md_0_5_1.txt  ceres_registration_md_1_1.txt  ceres_registration_md_1_2.txt  ceres_registration_md_1_4.txt  ceres_registration_md_2_3.txt  ceres_registration_md_2_4.txt  ceres_registration_mdad_1_2.txt  ceres_registration_mdad_2_3.txt  ceres_registration_new_md_1_2.txt  ceres_registration_new_mdad_1_2_10.txt  ceres_registration_new_mdad_1_2_thres.txt  ceres_registration_new_mdad_2_3.txt  ceres_registration_new_mdad_2_3_10.txt  ceres_registration_new_mdad_2_3_8.txt  ceres_registration_new_mdad_2_3_thres.txt  gps.txt  imu.txt  ins.txt  kstrongest_icp.txt  kstrongest_icp_big_data.txt  my_registration.txt  my_registration_0118.txt  my_registration_0119.txt  my_registration_0122.txt  my_registration_1121_1_keyframes.txt  my_registration_1121_2_keyframes.txt  my_registration_1121_3_keyframes.txt  my_registration_1221_2_keyframes.txt  my_registration_1221_3_keyframes.txt  (+64 more)
test/result/0110/: 0110_mdad_thres.txt  0110_mdad_thres_mul.txt  0116_mdad_thres_mul.txt  0117_mdad_thres_mul.txt  0118_mdad_thres_mul.txt  try.txt
test/result/contral/: 1.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  large_0.5.txt  large_1.5.txt  large_1.txt  large_10.5.txt  large_10.txt  large_11.5.txt  large_11.txt  large_12.5.txt  large_12.txt  large_13.5.txt  large_13.txt  large_14.5.txt  large_14.txt  large_15.txt  large_2.5.txt  large_2.txt  large_3.5.txt  large_3.txt  large_4.5.txt  large_4.txt  large_5.5.txt  large_5.txt  large_6.5.txt  large_6.txt  large_7.5.txt  large_7.txt  large_8.5.txt  large_8.txt  (+3 more)
test/result/filter/: 20190110-114621_ks.txt  20190110-114621_my.txt  ceres_registration_cen2018.txt  ceres_registration_cen2019.txt  ceres_registration_normal.txt  (+2 more)
test/result_evaluate/: evaluate_utils.py  evaluation.py  evo.py  keyframe_evo.py  main.py  show.py  try.py  yeti_evo.py
(+46 files in other folders)
